--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ text-align:center;
 overflow-x:hidden;
 }
 
-/* HEADER */
 .topbar{
 padding:15px;
 font-size:22px;
@@ -23,7 +22,6 @@ color:#ff2a2a;
 text-shadow:0 0 15px red;
 }
 
-/* ALBUM */
 .album-wrapper{
 position:relative;
 width:260px;
@@ -60,7 +58,6 @@ from{transform:rotate(0deg);}
 to{transform:rotate(360deg);}
 }
 
-/* PLAYER PANEL */
 .player{
 background:rgba(255,0,0,0.1);
 backdrop-filter:blur(8px);
@@ -83,11 +80,6 @@ box-shadow:0 0 15px red;
 cursor:pointer;
 }
 
-.controls button:hover{
-background:red;
-}
-
-/* PROGRESS BAR */
 #progress{
 width:90%;
 accent-color:red;
@@ -102,14 +94,12 @@ width:90%;
 margin:auto;
 }
 
-/* VISUALIZER */
 canvas{
 width:100%;
 height:130px;
 margin-top:10px;
 }
 
-/* FLOAT BUTTONS */
 .song-btn{
 position:fixed;
 bottom:20px;
@@ -124,7 +114,20 @@ box-shadow:0 0 20px red;
 cursor:pointer;
 }
 
-/* PLAYLIST */
+.settings-btn{
+position:fixed;
+bottom:20px;
+right:20px;
+background:red;
+border:none;
+color:white;
+padding:15px;
+border-radius:50%;
+font-size:18px;
+box-shadow:0 0 20px red;
+cursor:pointer;
+}
+
 #playlist{
 display:none;
 margin-top:10px;
@@ -136,10 +139,6 @@ overflow-y:auto;
 padding:8px;
 border-bottom:1px solid rgba(255,255,255,0.1);
 cursor:pointer;
-}
-
-#playlist div:hover{
-background:rgba(255,0,0,0.3);
 }
 </style>
 </head>
@@ -191,14 +190,15 @@ d="M130,130 m-115,0 a115,115 0 1,1 230,0 a115,115 0 1,1 -230,0"/>
 <canvas id="visualizer"></canvas>
 
 <button class="song-btn" onclick="togglePlaylist()">🎵</button>
+<button class="settings-btn">⚙️</button>
 
 <audio id="audio" crossorigin="anonymous"></audio>
 
 <script>
+
 const repoBase="https://raw.githubusercontent.com/carranzabhenz35-blip/BhenzFlix/main/";
 
 const songs=[
-
 "03 - Red Hot Chili Peppers - Californication.mp3",
 "04 - Avenged Sevenfold - Buried Alive.mp3",
 "05 - Red Hot Chili Peppers - Scar Tissue.mp3",
@@ -218,11 +218,10 @@ const songs=[
 "15 - Linkin Park - Given Up.mp3",
 "29 - Linkin Park - In Pieces.mp3",
 "31 - Linkin Park - New Divide.mp3",
-"33 - Linkin Park - Valentine's Day.mp3",
+"33 - Linkin Park - Valentines Day.mp3",
 "36 - Linkin Park - Hands Held High.mp3",
 "17 - JAY-Z - Numb _ Encore.mp3",
 "35 - JAY-Z - Dirt Off Your Shoulder.mp3"
-
 ];
 
 let current=0;
@@ -232,7 +231,7 @@ const playBtn=document.getElementById("playBtn");
 const progress=document.getElementById("progress");
 const playlist=document.getElementById("playlist");
 
-/* LOAD PLAYLIST */
+/* BUILD PLAYLIST */
 songs.forEach((song,index)=>{
 let div=document.createElement("div");
 div.innerText=song;
@@ -245,7 +244,7 @@ playlist.style.display=(playlist.style.display==="block")?"none":"block";
 }
 
 function loadSong(i){
-audio.src=encodeURI(repoBase+songs[i]);
+audio.src=repoBase+encodeURIComponent(songs[i]);
 document.getElementById("title").innerText=songs[i];
 }
 
@@ -271,6 +270,11 @@ loadSong(current);
 audio.play();
 }
 
+/* AUTO SKIP IF ERROR */
+audio.addEventListener("error",()=>{
+nextSong();
+});
+
 audio.addEventListener("timeupdate",()=>{
 progress.value=audio.currentTime;
 document.getElementById("currentTime").innerText=formatTime(audio.currentTime);
@@ -292,40 +296,8 @@ if(sec<10) sec="0"+sec;
 return min+":"+sec;
 }
 
-/* VISUALIZER */
-const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-const source=audioCtx.createMediaElementSource(audio);
-const analyser=audioCtx.createAnalyser();
-source.connect(analyser);
-analyser.connect(audioCtx.destination);
-analyser.fftSize=256;
-
-const canvas=document.getElementById("visualizer");
-const ctx=canvas.getContext("2d");
-canvas.width=window.innerWidth;
-canvas.height=130;
-
-const bufferLength=analyser.frequencyBinCount;
-const dataArray=new Uint8Array(bufferLength);
-
-function draw(){
-requestAnimationFrame(draw);
-analyser.getByteFrequencyData(dataArray);
-ctx.clearRect(0,0,canvas.width,canvas.height);
-
-let barWidth=(canvas.width/bufferLength)*2;
-let x=0;
-
-for(let i=0;i<bufferLength;i++){
-let barHeight=dataArray[i];
-ctx.fillStyle="rgb("+barHeight+",0,150)";
-ctx.fillRect(x,canvas.height-barHeight/1.5,barWidth,barHeight/1.5);
-x+=barWidth+1;
-}
-}
-draw();
-
 loadSong(current);
+
 </script>
 
 </body>
