--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@ const repoBase="https://raw.githubusercontent.com/carranzabhenz35-blip/BhenzFlix
 
 const songs=[
 "03 - Red Hot Chili Peppers - Californication.mp3",
+const songs = [
+"03 - Red Hot Chili Peppers - Californication.mp3",
 "04 - Avenged Sevenfold - Buried Alive.mp3",
 "05 - Red Hot Chili Peppers - Scar Tissue.mp3",
 "06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3",
