--- a/index.html
+++ b/index.html
@@ -2,342 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>BhenzFlix Music</title>
-
-<style>
-body{
-margin:0;
-font-family:Arial;
-background:radial-gradient(circle at top,#600000,#000);
-color:white;
-text-align:center;
-overflow-x:hidden;
-}
-
-.topbar{
-padding:15px;
-font-size:22px;
-letter-spacing:3px;
-color:#ff2a2a;
-text-shadow:0 0 15px red;
-}
-
-.album-wrapper{
-position:relative;
-width:260px;
-height:260px;
-margin:20px auto;
-}
-
-.album{
-width:190px;
-height:190px;
-border-radius:50%;
-overflow:hidden;
-margin:auto;
-box-shadow:0 0 40px red;
-}
-
-#cover{
-width:100%;
-height:100%;
-object-fit:cover;
-}
-
-.player{
-background:rgba(255,0,0,0.1);
-border-radius:20px;
-padding:15px;
-margin:15px auto;
-width:90%;
-box-shadow:0 0 20px rgba(255,0,0,0.4);
-}
-
-.controls button{
-background:rgba(255,0,0,0.3);
-border:none;
-color:white;
-font-size:18px;
-margin:5px;
-padding:10px 14px;
-border-radius:12px;
-box-shadow:0 0 15px red;
-cursor:pointer;
-}
-
-#progress{
-width:90%;
-accent-color:red;
-}
-
-.time{
-display:flex;
-justify-content:space-between;
-font-size:12px;
-width:90%;
-margin:auto;
-}
-
-#playlist{
-display:none;
-margin-top:10px;
-max-height:200px;
-overflow-y:auto;
-}
-
-#playlist div{
-padding:8px;
-border-bottom:1px solid rgba(255,255,255,0.1);
-cursor:pointer;
-}
-
-#playlist div:hover{
-background:rgba(255,0,0,0.3);
-}
-
-#eqPanel{
-display:none;
-margin-top:15px;
-}
-
-canvas{
-width:100%;
-height:120px;
-margin-top:20px;
-}
-
-.song-btn, .settings-btn{
-position:fixed;
-bottom:20px;
-background:red;
-border:none;
-color:white;
-padding:15px;
-border-radius:50%;
-font-size:18px;
-box-shadow:0 0 20px red;
-cursor:pointer;
-}
-
-.song-btn{ left:20px; }
-.settings-btn{ right:20px; }
-
-</style>
+<title>TEST PLAYER</title>
 </head>
+<body style="background:black; color:white; text-align:center; padding-top:100px;">
 
-<body>
+<h2>Simple Test Player</h2>
 
-<div class="topbar">🔥 BHENZFLIX MUSIC 🔥</div>
-
-<div class="album-wrapper">
-<div class="album">
-<img id="cover" src="cover.jpg">
-</div>
-</div>
-
-<div class="player">
-
-<div id="title">Loading...</div>
-
-<div class="controls">
-<button onclick="prevSong()">⏮</button>
-<button id="playBtn" onclick="togglePlay()">▶</button>
-<button onclick="nextSong()">⏭</button>
-</div>
-
-<input type="range" id="progress" value="0" min="0" step="1">
-<div class="time">
-<span id="currentTime">0:00</span>
-<span id="duration">0:00</span>
-</div>
-
-<div id="playlist"></div>
-
-<div id="eqPanel">
-SUB<br>
-<input type="range" id="sub" min="-30" max="30" value="0"><br>
-BASS<br>
-<input type="range" id="bass" min="-30" max="30" value="0"><br>
-MID<br>
-<input type="range" id="mid" min="-30" max="30" value="0"><br>
-TREBLE<br>
-<input type="range" id="treble" min="-30" max="30" value="0">
-</div>
-
-</div>
-
-<canvas id="visualizer"></canvas>
-
-<button class="song-btn" onclick="togglePlaylist()">🎵</button>
-<button class="settings-btn" onclick="toggleEQ()">⚙️</button>
-
-<audio id="audio"></audio>
-
-<script>
-
-const songs=[
-"song1.mp3",
-"song2.mp3",
-"song3.mp3"
-];
-
-let current=0;
-
-const audio=document.getElementById("audio");
-const playBtn=document.getElementById("playBtn");
-const progress=document.getElementById("progress");
-const playlist=document.getElementById("playlist");
-
-songs.forEach((song,index)=>{
-let div=document.createElement("div");
-div.innerText=song;
-div.onclick=()=>{
-current=index;
-loadSong(current);
-togglePlay();
-};
-playlist.appendChild(div);
-});
-
-function togglePlaylist(){
-playlist.style.display=(playlist.style.display==="block")?"none":"block";
-}
-
-function toggleEQ(){
-const panel=document.getElementById("eqPanel");
-panel.style.display=(panel.style.display==="block")?"none":"block";
-}
-
-function loadSong(i){
-audio.src=songs[i];
-document.getElementById("title").innerText=songs[i];
-}
-
-function togglePlay(){
-
-if(!audioCtx){
-initAudio();
-}
-
-if(audio.paused){
-audio.play();
-playBtn.innerText="⏸";
-}else{
-audio.pause();
-playBtn.innerText="▶";
-}
-}
-
-function nextSong(){
-current=(current+1)%songs.length;
-loadSong(current);
-togglePlay();
-}
-
-function prevSong(){
-current=(current-1+songs.length)%songs.length;
-loadSong(current);
-togglePlay();
-}
-
-audio.addEventListener("timeupdate",()=>{
-progress.value=audio.currentTime;
-document.getElementById("currentTime").innerText=formatTime(audio.currentTime);
-});
-
-audio.addEventListener("loadedmetadata",()=>{
-progress.max=audio.duration;
-document.getElementById("duration").innerText=formatTime(audio.duration);
-});
-
-progress.addEventListener("input",()=>{
-audio.currentTime=progress.value;
-});
-
-function formatTime(time){
-let min=Math.floor(time/60);
-let sec=Math.floor(time%60);
-if(sec<10) sec="0"+sec;
-return min+":"+sec;
-}
-
-/* AUDIO + EQ + VISUALIZER */
-
-let audioCtx, analyser, source;
-let sub,bass,mid,treble;
-
-function initAudio(){
-
-audioCtx=new (window.AudioContext||window.webkitAudioContext)();
-source=audioCtx.createMediaElementSource(audio);
-
-analyser=audioCtx.createAnalyser();
-analyser.fftSize=256;
-
-sub=audioCtx.createBiquadFilter();
-sub.type="lowshelf";
-sub.frequency.value=60;
-
-bass=audioCtx.createBiquadFilter();
-bass.type="lowshelf";
-bass.frequency.value=150;
-
-mid=audioCtx.createBiquadFilter();
-mid.type="peaking";
-mid.frequency.value=1000;
-mid.Q.value=1;
-
-treble=audioCtx.createBiquadFilter();
-treble.type="highshelf";
-treble.frequency.value=4000;
-
-source.connect(sub)
-.connect(bass)
-.connect(mid)
-.connect(treble)
-.connect(analyser)
-.connect(audioCtx.destination);
-
-document.getElementById("sub").oninput=e=>sub.gain.value=e.target.value;
-document.getElementById("bass").oninput=e=>bass.gain.value=e.target.value;
-document.getElementById("mid").oninput=e=>mid.gain.value=e.target.value;
-document.getElementById("treble").oninput=e=>treble.gain.value=e.target.value;
-
-startVisualizer();
-}
-
-function startVisualizer(){
-
-const canvas=document.getElementById("visualizer");
-const ctx=canvas.getContext("2d");
-canvas.width=window.innerWidth;
-canvas.height=120;
-
-const bufferLength=analyser.frequencyBinCount;
-const dataArray=new Uint8Array(bufferLength);
-
-function draw(){
-requestAnimationFrame(draw);
-analyser.getByteFrequencyData(dataArray);
-ctx.clearRect(0,0,canvas.width,canvas.height);
-
-let barWidth=(canvas.width/bufferLength)*2;
-let x=0;
-
-for(let i=0;i<bufferLength;i++){
-let barHeight=dataArray[i];
-ctx.fillStyle="red";
-ctx.fillRect(x,canvas.height-barHeight/1.5,barWidth,barHeight/1.5);
-x+=barWidth+1;
-}
-}
-
-draw();
-}
-
-loadSong(current);
-
-</script>
+<audio id="audio" controls>
+  <source src="song1.mp3" type="audio/mpeg">
+</audio>
 
 </body>
 </html>
