--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ padding-top:40px;
 
 h1{
 color:red;
-text-shadow:0 0 15px red;
+font-size:32px;
+text-shadow:0 0 20px red;
+margin-bottom:20px;
 }
 
 audio{
@@ -41,7 +43,7 @@ padding:10px;
 }
 
 #playlist div{
-padding:10px;
+padding:12px;
 border-bottom:1px solid rgba(255,255,255,0.2);
 cursor:pointer;
 }
@@ -66,12 +68,15 @@ background:rgba(255,0,0,0.4);
 
 <script>
 
+// EXACT filenames from your repo (ROOT folder)
 const songs = [
 "03 - Red Hot Chili Peppers - Californication.mp3",
 "04 - Avenged Sevenfold - Buried Alive.mp3",
 "05 - Red Hot Chili Peppers - Scar Tissue.mp3",
 "06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3",
-"10 - Avenged Sevenfold - Unholy Confessions.mp3"
+"07 - Linkin Park - What I've Done.mp3",
+"10 - Avenged Sevenfold - Unholy Confessions.mp3",
+"13 - Avenged Sevenfold - Seize the Day.mp3"
 ];
 
 const audio = document.getElementById("audio");
