--- a/index.html
+++ b/index.html
@@ -17,39 +17,67 @@ text-align:center;
 .overlay{
 background:rgba(0,0,0,0.75);
 min-height:100vh;
-padding-top:40px;
+padding-top:30px;
 }
 
 h1{
 color:red;
-font-size:32px;
 text-shadow:0 0 20px red;
-margin-bottom:20px;
 }
 
 audio{
 width:90%;
-margin-top:20px;
+margin-top:15px;
 }
 
 #playlist{
-margin-top:30px;
+margin-top:20px;
 width:90%;
-margin-left:auto;
-margin-right:auto;
+margin:auto;
 background:rgba(0,0,0,0.6);
 border-radius:10px;
 padding:10px;
 }
 
 #playlist div{
-padding:12px;
+padding:10px;
 border-bottom:1px solid rgba(255,255,255,0.2);
 cursor:pointer;
 }
 
 #playlist div:hover{
 background:rgba(255,0,0,0.4);
+}
+
+#eqPanel{
+display:none;
+margin-top:15px;
+background:rgba(0,0,0,0.7);
+padding:10px;
+border-radius:10px;
+width:90%;
+margin-left:auto;
+margin-right:auto;
+}
+
+#eqPanel input{
+width:80%;
+}
+
+canvas{
+width:100%;
+height:120px;
+margin-top:20px;
+}
+
+.settingsBtn{
+margin-top:10px;
+padding:8px 15px;
+background:red;
+border:none;
+color:white;
+cursor:pointer;
+border-radius:5px;
 }
 </style>
 </head>
@@ -62,13 +90,28 @@ background:rgba(255,0,0,0.4);
 
 <audio id="audio" controls></audio>
 
+<button class="settingsBtn" onclick="toggleEQ()">⚙ Equalizer</button>
+
+<div id="eqPanel">
+SUB<br>
+<input type="range" id="sub" min="-30" max="30" value="0"><br>
+BASS<br>
+<input type="range" id="bass" min="-30" max="30" value="0"><br>
+MID<br>
+<input type="range" id="mid" min="-30" max="30" value="0"><br>
+TREBLE<br>
+<input type="range" id="treble" min="-30" max="30" value="0">
+</div>
+
 <div id="playlist"></div>
+
+<canvas id="visualizer"></canvas>
 
 </div>
 
 <script>
 
-// EXACT filenames (dapat EXACT sa repo mo)
+// SONG LIST
 const songs = [
 "03 - Red Hot Chili Peppers - Californication.mp3",
 "04 - Avenged Sevenfold - Buried Alive.mp3",
@@ -82,27 +125,104 @@ const songs = [
 const audio = document.getElementById("audio");
 const playlist = document.getElementById("playlist");
 
-function loadSong(song){
-audio.src = song;
-audio.load();
-audio.play().catch(e => console.log("Play error:", e));
+songs.forEach(song=>{
+let div=document.createElement("div");
+div.innerText=song;
+div.onclick=()=>{
+audio.src=song;
+audio.play();
+};
+playlist.appendChild(div);
+});
+
+audio.src=songs[0];
+
+// TOGGLE EQ
+function toggleEQ(){
+let panel=document.getElementById("eqPanel");
+panel.style.display = panel.style.display==="block" ? "none":"block";
 }
 
-songs.forEach(song => {
+/* AUDIO CONTEXT */
+let audioCtx;
+let source;
+let analyser;
+let sub,bass,mid,treble;
 
-let div = document.createElement("div");
-div.innerText = song;
+audio.addEventListener("play",()=>{
 
-div.onclick = () => {
-loadSong(song);
-};
+if(!audioCtx){
 
-playlist.appendChild(div);
+audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+source=audioCtx.createMediaElementSource(audio);
+
+analyser=audioCtx.createAnalyser();
+analyser.fftSize=256;
+
+sub=audioCtx.createBiquadFilter();
+sub.type="lowshelf";
+sub.frequency.value=60;
+
+bass=audioCtx.createBiquadFilter();
+bass.type="lowshelf";
+bass.frequency.value=150;
+
+mid=audioCtx.createBiquadFilter();
+mid.type="peaking";
+mid.frequency.value=1000;
+mid.Q.value=1;
+
+treble=audioCtx.createBiquadFilter();
+treble.type="highshelf";
+treble.frequency.value=4000;
+
+source.connect(sub)
+.connect(bass)
+.connect(mid)
+.connect(treble)
+.connect(analyser)
+.connect(audioCtx.destination);
+
+document.getElementById("sub").oninput=e=>sub.gain.value=e.target.value;
+document.getElementById("bass").oninput=e=>bass.gain.value=e.target.value;
+document.getElementById("mid").oninput=e=>mid.gain.value=e.target.value;
+document.getElementById("treble").oninput=e=>treble.gain.value=e.target.value;
+
+startVisualizer();
+
+}
 
 });
 
-// auto load first song
-audio.src = songs[0];
+/* VISUALIZER */
+function startVisualizer(){
+
+const canvas=document.getElementById("visualizer");
+const ctx=canvas.getContext("2d");
+canvas.width=window.innerWidth;
+canvas.height=120;
+
+const bufferLength=analyser.frequencyBinCount;
+const dataArray=new Uint8Array(bufferLength);
+
+function draw(){
+requestAnimationFrame(draw);
+analyser.getByteFrequencyData(dataArray);
+ctx.clearRect(0,0,canvas.width,canvas.height);
+
+let barWidth=(canvas.width/bufferLength)*2;
+let x=0;
+
+for(let i=0;i<bufferLength;i++){
+let barHeight=dataArray[i];
+ctx.fillStyle="red";
+ctx.fillRect(x,canvas.height-barHeight/1.5,barWidth,barHeight/1.5);
+x+=barWidth+1;
+}
+}
+
+draw();
+}
 
 </script>
 
